# custom-login-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  example_command.txt  pyproject.toml
.github/workflows/: build-image.yml  publish.yml  test.yml
.github/workflows/.github/workflows/: static-checks
custom_login_api/app/: config.py  custom_login_api.py  main.py
custom_login_api/auth/: jwt.py  otp.py
custom_login_api/database/: database_client.py  otp_table_client.py  sqlite_database_client.py  table_client.py  users_table_client.py
custom_login_api/email/: email_client.py  print_to_terminal_email_client.py
custom_login_api/models/: exceptions.py
custom_login_api/models/api/: login_request.py  successful_login_response.py  user_registration_data.py
custom_login_api/models/auth/: token_payload.py  user_identity.py
scripts/: build_docker_image.sh  dev_entrypoint.sh  run_docker_container.sh  run_docker_container_from_ghcr.sh
test/app/: test_custom_login_api.py
test/auth/: test_jwt.py  test_otp.py
