[tool.poetry]
name = "custom-login-api"
version = "0.1.0"
description = ""
authors = ["alexander3605 <alessandro.serena3605@gmail.com>"]
readme = "README.md"
packages = [{include = "custom_login_api"}]

[tool.poetry.dependencies]
python = "^3.10"

environ-config = "^24.1.0"
fastapi = "^0.115.5"
pydantic = {version = "^2.10.3", extras = ["email"]}
pyjwt = "^2.10.0"
uvicorn = {version = "^0.32.1", extras = ["standard"]}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.28.1"
isort = "^5.12.0"
mypy = "^1.13.0"
pylint = "^3.3.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
(
    \.eggs |
    \.git |
    \.githooks |
    \.idea |
    \.mypy_cache |
    \.?venv |
    \.vscode |
    build |
    dist |
    node_modules
)
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
